{
  "version": 4,
  "terraform_version": "1.0.4",
  "serial": 33,
  "lineage": "da8a3243-e4db-e126-9768-24f7900e5ff9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00be542323d92ba62",
            "domain": "vpc",
            "id": "eipalloc-00be542323d92ba62",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-18-232-233-216.compute-1.amazonaws.com",
            "public_ip": "18.232.233.216",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "DB_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-065efef2c739d613b",
            "arn": "arn:aws:ec2:us-east-1:019408375185:instance/i-015cb837b1be901cc",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-015cb837b1be901cc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terrafromTF",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f81c8a5010afb187",
            "private_dns": "ip-10-0-2-123.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.123",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0922beaefa81d8656",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dfd1ff82d94670b0",
            "tags": {
              "Env": "Dev",
              "Name": "DB_server",
              "Owner_Name": "Sandeep",
              "category": "Local_Dev",
              "project_name": "terrafrom_testing"
            },
            "tags_all": {
              "Env": "Dev",
              "Name": "DB_server",
              "Owner_Name": "Sandeep",
              "category": "Local_Dev",
              "project_name": "terrafrom_testing"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-012c077eaede8e399"
            ]
          },
          "dependencies": [
            "aws_security_group.sg2",
            "aws_subnet.Private_subnet",
            "aws_vpc.Main_VPC",
            "data.aws_ami.AmazonAmiName"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-065efef2c739d613b",
            "arn": "arn:aws:ec2:us-east-1:019408375185:instance/i-01ff94500f4e95230",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01ff94500f4e95230",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terrafromTF",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08d87cb452860f710",
            "private_dns": "ip-10-0-1-171.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.171",
            "public_ip": "54.166.14.87",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cd0c678cbdb64957",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a1c8932bd3f92da4",
            "tags": {
              "Env": "Dev",
              "Name": "Httpd_web_1_server",
              "Owner_Name": "Sandeep",
              "category": "Local_Dev",
              "project_name": "terrafrom_testing"
            },
            "tags_all": {
              "Env": "Dev",
              "Name": "Httpd_web_1_server",
              "Owner_Name": "Sandeep",
              "category": "Local_Dev",
              "project_name": "terrafrom_testing"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e99f472c16a8538a"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_port",
            "aws_subnet.Public_subnet",
            "aws_vpc.Main_VPC",
            "data.aws_ami.AmazonAmiName"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server_ex",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-065efef2c739d613b",
            "arn": "arn:aws:ec2:us-east-1:019408375185:instance/i-04030b429c0d2a464",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04030b429c0d2a464",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terrafromTF",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d1259544fe37cf02",
            "private_dns": "ip-10-0-1-55.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.55",
            "public_ip": "3.85.50.73",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-068dcb701ec8da0c2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a1c8932bd3f92da4",
            "tags": {
              "Env": "Dev",
              "Name": "Httpd_web_2_server",
              "Owner_Name": "Sandeep",
              "category": "Local_Dev",
              "project_name": "terrafrom_testing"
            },
            "tags_all": {
              "Env": "Dev",
              "Name": "Httpd_web_2_server",
              "Owner_Name": "Sandeep",
              "category": "Local_Dev",
              "project_name": "terrafrom_testing"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e99f472c16a8538a"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_port",
            "aws_subnet.Public_subnet",
            "aws_vpc.Main_VPC",
            "data.aws_ami.AmazonAmiName"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:019408375185:internet-gateway/igw-0f94a226b0282c6dc",
            "id": "igw-0f94a226b0282c6dc",
            "owner_id": "019408375185",
            "tags": {
              "Env": "Dev",
              "Name": "TF_IG",
              "Owner_Name": "Sandeep",
              "category": "Local_Dev",
              "project_name": "terrafrom_testing"
            },
            "tags_all": {
              "Env": "Dev",
              "Name": "TF_IG",
              "Owner_Name": "Sandeep",
              "category": "Local_Dev",
              "project_name": "terrafrom_testing"
            },
            "vpc_id": "vpc-03af37395fc8b08aa"
          },
          "dependencies": [
            "aws_vpc.Main_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00be542323d92ba62",
            "connectivity_type": "public",
            "id": "nat-0f63980ffc876e364",
            "network_interface_id": "eni-021cbee592cbf084c",
            "private_ip": "10.0.2.176",
            "public_ip": "18.232.233.216",
            "subnet_id": "subnet-0dfd1ff82d94670b0",
            "tags": {
              "Env": "Dev",
              "Name": "Nat_Gateway",
              "Owner_Name": "Sandeep",
              "category": "Local_Dev",
              "project_name": "terrafrom_testing"
            },
            "tags_all": {
              "Env": "Dev",
              "Name": "Nat_Gateway",
              "Owner_Name": "Sandeep",
              "category": "Local_Dev",
              "project_name": "terrafrom_testing"
            }
          },
          "dependencies": [
            "aws_eip.lb",
            "aws_subnet.Private_subnet",
            "aws_vpc.Main_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "r",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0422876a02f6d30a41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f63980ffc876e364",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0422876a02f6d30a4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.lb",
            "aws_nat_gateway.example",
            "aws_route_table.Private",
            "aws_subnet.Private_subnet",
            "aws_vpc.Main_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f94a226b0282c6dc",
            "id": "r-rtb-0f6c459613ad920fe1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f6c459613ad920fe",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.Public",
            "aws_vpc.Main_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:019408375185:route-table/rtb-0422876a02f6d30a4",
            "id": "rtb-0422876a02f6d30a4",
            "owner_id": "019408375185",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Env": "Dev",
              "Name": "RT_private",
              "Owner_Name": "Sandeep",
              "category": "Local_Dev",
              "project_name": "terrafrom_testing"
            },
            "tags_all": {
              "Env": "Dev",
              "Name": "RT_private",
              "Owner_Name": "Sandeep",
              "category": "Local_Dev",
              "project_name": "terrafrom_testing"
            },
            "timeouts": null,
            "vpc_id": "vpc-03af37395fc8b08aa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Main_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:019408375185:route-table/rtb-0f6c459613ad920fe",
            "id": "rtb-0f6c459613ad920fe",
            "owner_id": "019408375185",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Env": "Dev",
              "Name": "RT_Public",
              "Owner_Name": "Sandeep",
              "category": "Local_Dev",
              "project_name": "terrafrom_testing"
            },
            "tags_all": {
              "Env": "Dev",
              "Name": "RT_Public",
              "Owner_Name": "Sandeep",
              "category": "Local_Dev",
              "project_name": "terrafrom_testing"
            },
            "timeouts": null,
            "vpc_id": "vpc-03af37395fc8b08aa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Main_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b5acb2a3ba90ea88",
            "route_table_id": "rtb-0f6c459613ad920fe",
            "subnet_id": "subnet-0a1c8932bd3f92da4"
          },
          "dependencies": [
            "aws_route_table.Public",
            "aws_subnet.Public_subnet",
            "aws_vpc.Main_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-040f169c6842b87eb",
            "route_table_id": "rtb-0422876a02f6d30a4",
            "subnet_id": "subnet-0dfd1ff82d94670b0"
          },
          "dependencies": [
            "aws_route_table.Private",
            "aws_subnet.Private_subnet",
            "aws_vpc.Main_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_port",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:019408375185:security-group/sg-0e99f472c16a8538a",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e99f472c16a8538a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 21,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 21
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 444,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 444
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_all port",
            "name_prefix": "",
            "owner_id": "019408375185",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "Dev",
              "Name": "TF_SG",
              "Owner_Name": "Sandeep",
              "category": "Local_Dev",
              "project_name": "terrafrom_testing"
            },
            "tags_all": {
              "Env": "Dev",
              "Name": "TF_SG",
              "Owner_Name": "Sandeep",
              "category": "Local_Dev",
              "project_name": "terrafrom_testing"
            },
            "timeouts": null,
            "vpc_id": "vpc-03af37395fc8b08aa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Main_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:019408375185:security-group/sg-012c077eaede8e399",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-012c077eaede8e399",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_all s2",
            "name_prefix": "",
            "owner_id": "019408375185",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "Dev",
              "Name": "TF_SG",
              "Owner_Name": "Sandeep",
              "category": "Local_Dev",
              "project_name": "terrafrom_testing"
            },
            "tags_all": {
              "Env": "Dev",
              "Name": "TF_SG",
              "Owner_Name": "Sandeep",
              "category": "Local_Dev",
              "project_name": "terrafrom_testing"
            },
            "timeouts": null,
            "vpc_id": "vpc-03af37395fc8b08aa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Main_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:019408375185:subnet/subnet-0dfd1ff82d94670b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dfd1ff82d94670b0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "019408375185",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "Dev",
              "Name": "Private_subnet",
              "Owner_Name": "Sandeep",
              "category": "Local_Dev",
              "project_name": "terrafrom_testing"
            },
            "tags_all": {
              "Env": "Dev",
              "Name": "Private_subnet",
              "Owner_Name": "Sandeep",
              "category": "Local_Dev",
              "project_name": "terrafrom_testing"
            },
            "vpc_id": "vpc-03af37395fc8b08aa"
          },
          "dependencies": [
            "aws_vpc.Main_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:019408375185:subnet/subnet-0a1c8932bd3f92da4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a1c8932bd3f92da4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "019408375185",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "Dev",
              "Name": "Public_subnet",
              "Owner_Name": "Sandeep",
              "category": "Local_Dev",
              "project_name": "terrafrom_testing"
            },
            "tags_all": {
              "Env": "Dev",
              "Name": "Public_subnet",
              "Owner_Name": "Sandeep",
              "category": "Local_Dev",
              "project_name": "terrafrom_testing"
            },
            "vpc_id": "vpc-03af37395fc8b08aa"
          },
          "dependencies": [
            "aws_vpc.Main_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Main_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:019408375185:vpc/vpc-03af37395fc8b08aa",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-060b8e75a63174824",
            "default_route_table_id": "rtb-0399a6ecad3007d4b",
            "default_security_group_id": "sg-0f784961261159988",
            "dhcp_options_id": "dopt-0782512ea6fd227b7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-03af37395fc8b08aa",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0399a6ecad3007d4b",
            "owner_id": "019408375185",
            "tags": {
              "Env": "Dev",
              "Name": "Main_VPC",
              "Owner_Name": "Sandeep",
              "category": "Local_Dev",
              "project_name": "terrafrom_testing"
            },
            "tags_all": {
              "Env": "Dev",
              "Name": "Main_VPC",
              "Owner_Name": "Sandeep",
              "category": "Local_Dev",
              "project_name": "terrafrom_testing"
            }
          }
        }
      ]
    }
  ]
}